# audio-controller

./: README.md  build.nu  design.excalidraw  desktop.ini
audio-controller-client/: README.md
audio-controller-host/: Cargo.toml
audio-controller-host/src/: main.rs
hardware/: README.md
hardware/pcb/audio-controller/: audio-controller.kicad_prl  audio-controller.kicad_pro  audio-controller.kicad_sch
software/: Cargo.toml  README.md  build.nu  commands.json  communication.excalidraw  config.csv  config.excalidraw
software/.cargo/: config.toml
software/audio-controller-macros/: Cargo.toml
software/audio-controller-macros/src/: lib.rs
software/client/: Cargo.toml  Embed.toml  Makefile.toml  README.md  client.asm  client.ioc
software/client/.cargo/: config.toml
software/client/src/: error.rs  main.rs  prelude.rs
software/client/src/message/: mod.rs
software/client/src/usb/: device_handler.rs  mod.rs
software/client/src/utils/: mod.rs  setup.rs
software/macros/: Cargo.toml
software/macros/src/: lib.rs
software/server/: Cargo.toml  README.md  controller-buttons.conf  controller-sliders.conf
software/server/.cargo/: config.toml
software/server/src/: hardware_rx.rs  main.rs  os_commands.rs
software/src/: audiolevels.rs  lib.rs  macros.rs  prelude.rs
software/src/action/: mod.rs
software/src/config/: bitmap.rs  btn.rs  hardware.rs  mod.rs  slider.rs  software.rs
software/src/message/: audiolevels.rs  config_entry.rs  error.rs  mod.rs  usb_nostd.rs
