[package]
name = "client"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core specific libraries
alloc-cortex-m = "0.4.4"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

# FFI with C
# cty = "0.2.2" 

embassy-executor = { version = "0.5.0", features = [
    "defmt",
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
    "executor-interrupt",
] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-stm32 = { version = "0.1.0", features = [
    "stm32f401cc",
    "defmt",
    "memory-x",
    "time-driver-any",
    "time",
    "rt",
    "exti",
    # "low-power",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { version = "0.2.0", features = ["defmt"] }

#serialization
serde = { version = "1.0.203", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_cbor = { version = "0.11.2", default-features = false, features = [
    "alloc",
] }

# logging and panic handling
defmt = { version = "0.3.5", features = ["alloc"] }
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

thiserror-no-std = "2.0.2"
heapless = { version = "0.8.0", features = ["defmt-03", "serde"] }
usbd-hid = { version = "0.7.0", features = ["defmt"] }

[dependencies.shared-data]
version = "0.1.0"
path = ".."
features = ["defmt", "logging", "embassy"]

[[bin]]
name = "client"
harness = false

# Set the default for dependencies.
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
incremental = true
lto = "fat"
opt-level = "s"

[profile.dev.package."*"]
opt-level = "s"
debug = true
# debug-assertions = true

[profile.release]
codegen-units = 1
incremental = true
debug = true
debug-assertions = true
lto = true
opt-level = "s"

[build-dependencies]
cc = "1.0.83"
# cmake = "0.1.50"
