[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[[bin]]
name = "configurator"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-serial = { version = "5.4.4" }
windows-volume-control = "0.1.1"

serde_cbor = { version = "0.11.2", features = ["alloc"] }

[dependencies.shared-data]
version = "0.1.0"
path = ".."
default-features = false
features = ["std"]

[dev-dependencies.server]
version = "0.1.0"
path = "."
