[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "audio-controller-server"

[[bin]]
name = "audio-controller-server"
path = "src/main.rs"

[[bin]]
name = "configurator"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-serial = { version = "5.4.4" }
windows-volume-control = "0.1.1"

serde_cbor = { version = "0.11.2", features = ["alloc"] }
log = "0.4.21"
env_logger = "0.11.3"
nusb = "0.1.9"
futures-lite = "2.3.0"

[dependencies.shared-data]
version = "0.1.0"
path = ".."
features = ["std", "logging"]

# [dev-dependencies.server]
# version = "0.1.0"
# path = "."
